--- a/Red Black Tree.vcxproj
+++ b/Red Black Tree.vcxproj
@@ -133,6 +133,9 @@
   <ItemGroup>
     <ClInclude Include="RedBlackTree.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
